# libmep

./: LICENSE.md  Makefile.am  README.md  autogen.sh  clean.sh  configure.ac  rmgen.sh
benchmark/: alloc.c  benchmark.c  benchmark.h
include/: mep.h
src/: alloc.c  free.c  mep.c  mep_p.h  realloc.c  string.c  utlist.h
tests/: test.c  test.h  test1.c  test2.c  test3.c
